--- a/Week7/4Thursday/practices/practice-css-transitions/starter/your-code.css
+++ b/Week7/4Thursday/practices/practice-css-transitions/starter/your-code.css
@@ -5,6 +5,11 @@
     width: auto;
     margin-left: 300px;
     /* Your code here */
+    transition: transform 2s;
+}
+
+.rocket_svg:hover {
+    transform: rotate(250deg)
 }
 
 /* Create rocket hover animation here
@@ -17,19 +22,32 @@
     width: auto;
     margin-left: 200px;
     /* Your code here */
+    transition: transform 2s;
+}
+
+.astronaut_svg:hover {
+    transform: translate(100px);
 }
 
 /* Create astronaut hover animation here
 
 /* ======= BONUS ======= */
 
-/* .earth_svg {
+.earth_svg {
     height: 200px;
     width: auto;
     margin-left: 300px;
-    /* Your animation here
+    /* Your animation here */
+    animation: spin 3s linear infinite;
 }
 
 @keyframes spin {
-    /* Set up your keyframe animation here
-} */
+    /* Set up your keyframe animation here */
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
